corrected overlap at the blog page

--- a/my-portfolio/src/styles/_blog.scss
+++ b/my-portfolio/src/styles/_blog.scss
@@ -13,7 +13,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 11% 0px 20% 0%;
+    margin: 130px 0px 20% 0%;
 
     .blog__content {
       font-family: "Pattaya", sans-serif;
